@@ -1,4 +1,4 @@
-plugindatadir = $(datadir)/$(PACKAGE)/plugindata
+plugindatadir = $(datadir)/$(PACKAGE)/plugindata/validate
 plugindata_DATA = \
 	basic.py
 EXTRA_DIST = $(plugindata_DATA)
