@@ -1,5 +1,12 @@
 2008-01-11  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugindata/validate/Makefile.am: Fixed install path.
+	* plugins/event_monitor.py: Added a new global hotkey for
+	starting/stopping recording.
+	* plugins/validate.glade: Removed Save button, changed layout so
+	it won't be so wide. Added label relationships to comobox and label.
+	* plugins/validate.py: Removed Save button stuff.
+
 	* plugindata/validate/Makefile.am: 
 	* plugindata/Makefile.am: Added missing Makefile.ams.
 	
